--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(design_patterns)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(design_patterns main.cpp)
+#add_executable(design_patterns main.cpp)
+add_executable(design_patterns abstract_factory.cpp)
