--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,5 @@ project(design_patterns)
 set(CMAKE_CXX_STANDARD 14)
 
 #add_executable(design_patterns main.cpp)
-add_executable(design_patterns abstract_factory.cpp)
+#add_executable(design_patterns abstract_factory.cpp)
+add_executable(design_patterns factory_method.cpp)
