--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,5 @@ set(CMAKE_CXX_STANDARD 14)
 
 #add_executable(design_patterns main.cpp)
 #add_executable(design_patterns abstract_factory.cpp)
-add_executable(design_patterns factory_method.cpp)
+#add_executable(design_patterns factory_method.cpp)
+add_executable(design_patterns prototype_pattern.cpp)
