Added improved singleton sample

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,5 @@ set(CMAKE_CXX_STANDARD 14)
 #add_executable(design_patterns abstract_factory.cpp)
 #add_executable(design_patterns factory_method.cpp)
 #add_executable(design_patterns prototype_pattern.cpp)
-add_executable(design_patterns singleton_pattern.cpp)
+#add_executable(design_patterns singleton_pattern.cpp)
+add_executable(design_patterns singleton_pattern_improved.cpp)
