--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,4 +17,5 @@ FIND_PACKAGE(Boost 1.67.0 REQUIRED)
 #add_executable(design_patterns structural/adapter_pattern.cpp)
 #add_executable(design_patterns structural/bridge_pattern.cpp)
 #add_executable(design_patterns structural/composite_pattern01.cpp)
-add_executable(design_patterns structural/composite_pattern02.cpp)
+#add_executable(design_patterns structural/composite_pattern02.cpp)
+add_executable(design_patterns structural/decorator_pattern.cpp)
