--- a/app/common/CMakeLists.txt
+++ b/app/common/CMakeLists.txt
@@ -8,5 +8,13 @@ set(HEADERS
         ${PROJECT_SOURCE_DIR}/include/constants/Constants.h
         ${PROJECT_SOURCE_DIR}/include/types/Report.h
         ${PROJECT_SOURCE_DIR}/include/types/ReportFormat.h
-        ${PROJECT_SOURCE_DIR}/include/types/User.h
-        )
+        ${PROJECT_SOURCE_DIR}/include/types/User.h)
+
+set(SOURCES
+        ${PROJECT_SOURCE_DIR}/src/types/User.cpp
+        ${PROJECT_SOURCE_DIR}/src/types/Report.cpp
+        ${PROJECT_SOURCE_DIR}/src/types/ReportFormat.cpp)
+
+add_library(${PROJECT_NAME} STATIC ${SOURCES} ${HEADERS})
+
+target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/inc;include)
