--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -4,3 +4,5 @@ set(CMAKE_CXX_FLAGS "-std=c++17 -O3 -pedantic -Wall -Werror")
 
 add_subdirectory(external)
 add_subdirectory(common)
+add_subdirectory(interfaces)
+add_subdirectory(parsers)
