--- a/app/parsers/CMakeLists.txt
+++ b/app/parsers/CMakeLists.txt
@@ -14,3 +14,10 @@ set(SOURCES
         )
 
 add_library(${PROJECT_NAME} STATIC ${SOURCES} ${HEADERS})
+
+target_link_libraries(${PROJECT_NAME} PRIVATE
+        Common
+        External
+        Interfaces)
+
+target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include)
