--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(server)
 
-set(CMAKE_CXX_FLAGS "-std=c++17 -O3 -pedantic -Wall -Werror")
+set(CMAKE_CXX_FLAGS "-std=c++17 -fsanitize=address -ggdb3 -Wall -Wextra -pedantic -Werror")
 
 add_subdirectory(external)
 add_subdirectory(common)
