--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(external)
 add_subdirectory(common)
 add_subdirectory(interfaces)
 add_subdirectory(parsers)
+add_subdirectory(configs)
