--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(interfaces)
 add_subdirectory(parsers)
 add_subdirectory(configs)
 add_subdirectory(auth)
+add_subdirectory(servers)
