--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -9,3 +9,5 @@ add_subdirectory(parsers)
 add_subdirectory(configs)
 add_subdirectory(auth)
 add_subdirectory(servers)
+add_subdirectory(services)
+add_subdirectory(storage)
